various significant house-keeping updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jello.js",
-  "version": "0.0.3",
+  "version": "0.0.23",
   "description": "A javascript ORM to simplify API integrations with working with simple models and collections from Laraval applications.",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "author": "Clayton Salazar",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.33"
   }
 }
